argo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appDeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appName
  template:
    spec:
      containers:
        - name: jdna-sync
          image: ghcr.io/dtlr/jdna-sync:edge
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /v2/readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
