argo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app-svc
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
