argo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    cert-manager.io/cluster-issuer: leprod
    external-dns.alpha.kubernetes.io/target: ing.az.msvcs.dtlr.io
spec:
  ingressClassName: traefik
  rules:
    - host: example.somewhere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
  tls:
    - hosts: [example.jdna.io]
      secretName: example-tls
